--- a/DreamLister/Base.lproj/Main.storyboard
+++ b/DreamLister/Base.lproj/Main.storyboard
@@ -30,15 +30,15 @@
                                 </segments>
                                 <color key="tintColor" red="0.29222656250000001" green="0.29222656250000001" blue="0.29222656250000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </segmentedControl>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="150" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="DGr-8u-43f">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="150" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="DGr-8u-43f">
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="150" id="iQk-rH-eAN" customClass="ItemCell" customModule="DreamLister" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ItemCell" rowHeight="150" id="iQk-rH-eAN" customClass="ItemCell" customModule="DreamLister" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="343" height="150"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="iQk-rH-eAN" id="33v-pD-6Or">
-                                            <frame key="frameInset" width="343" height="149"/>
+                                            <frame key="frameInset" width="343" height="150"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eru-q5-g9K" customClass="ItemCell" customModule="DreamLister" customModuleProvider="target">
@@ -125,23 +125,140 @@
                     <navigationItem key="navigationItem" title="DreamLister" id="gh5-5r-dev">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="pw8-zP-trh">
                             <color key="tintColor" red="0.29222656250000001" green="0.29222656250000001" blue="0.29222656250000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <connections>
+                                <segue destination="nVD-wt-ijQ" kind="show" identifier="ItemDetailsVCNew" id="CEe-J9-N7P"/>
+                            </connections>
                         </barButtonItem>
                     </navigationItem>
                     <connections>
                         <outlet property="segment" destination="nkv-GU-ngV" id="bbp-5c-OXM"/>
                         <outlet property="tableView" destination="DGr-8u-43f" id="oGn-HQ-GAo"/>
+                        <segue destination="nVD-wt-ijQ" kind="show" identifier="ItemsDetailsNew" id="jhF-FD-Yhl"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="965.60000000000002" y="-562.66866566716647"/>
         </scene>
+        <!--Add/Edit-->
+        <scene sceneID="ctc-we-U8r">
+            <objects>
+                <viewController id="nVD-wt-ijQ" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="i8f-mI-8PY"/>
+                        <viewControllerLayoutGuide type="bottom" id="hFM-aZ-j3W"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="mC6-94-LmP">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="imagePick" translatesAutoresizingMaskIntoConstraints="NO" id="Au7-4L-9zv">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="OMa-XQ-nlq"/>
+                                    <constraint firstAttribute="width" constant="100" id="o2e-Zq-EFP"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jvX-Wn-Mz4">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="2P4-dM-pmd"/>
+                                    <constraint firstAttribute="width" constant="100" id="O2N-bG-yBk"/>
+                                </constraints>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u6I-Wj-jKX">
+                                <color key="backgroundColor" red="0.91958984369999996" green="0.91958984369999996" blue="0.91958984369999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="WPC-rN-loO"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Price" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2bn-xv-cEP">
+                                <color key="backgroundColor" red="0.91958984369999996" green="0.91958984369999996" blue="0.91958984369999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="40" id="JRn-aB-UNq"/>
+                                    <constraint firstAttribute="height" constant="40" id="i2D-n9-7Qd"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Details" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mAb-cn-Mpt">
+                                <color key="backgroundColor" red="0.91958984369999996" green="0.91958984369999996" blue="0.91958984369999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="V7W-gS-wZC"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PLz-w9-Bi1">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="125" id="noR-tu-OZw"/>
+                                </constraints>
+                            </pickerView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="R4n-fe-NTW">
+                                <color key="backgroundColor" red="0.24283203119999999" green="0.24283203119999999" blue="0.24283203119999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="OQo-jz-TAY"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="17"/>
+                                <state key="normal" title="Save Item">
+                                    <color key="titleColor" red="0.91958984369999996" green="0.91958984369999996" blue="0.91958984369999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select Store" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ln9-mx-Lg8">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="31" id="hWY-SM-8UL"/>
+                                    <constraint firstAttribute="width" constant="141" id="i3w-sa-X5F"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="PLz-w9-Bi1" firstAttribute="top" secondItem="ln9-mx-Lg8" secondAttribute="bottom" constant="8" id="8D1-fH-AIW"/>
+                            <constraint firstItem="jvX-Wn-Mz4" firstAttribute="top" secondItem="i8f-mI-8PY" secondAttribute="bottom" constant="8" id="AMi-0J-XIC"/>
+                            <constraint firstItem="jvX-Wn-Mz4" firstAttribute="leading" secondItem="mC6-94-LmP" secondAttribute="leadingMargin" id="B3H-yP-LXT"/>
+                            <constraint firstItem="R4n-fe-NTW" firstAttribute="top" secondItem="PLz-w9-Bi1" secondAttribute="bottom" constant="8" id="FiV-7t-sdU"/>
+                            <constraint firstItem="u6I-Wj-jKX" firstAttribute="top" secondItem="i8f-mI-8PY" secondAttribute="bottom" constant="18" id="Ggi-CD-4tD"/>
+                            <constraint firstItem="hFM-aZ-j3W" firstAttribute="top" secondItem="R4n-fe-NTW" secondAttribute="bottom" constant="20" id="Ice-Un-C4z"/>
+                            <constraint firstItem="u6I-Wj-jKX" firstAttribute="trailing" secondItem="mC6-94-LmP" secondAttribute="trailingMargin" id="NG5-l2-UfE"/>
+                            <constraint firstItem="Au7-4L-9zv" firstAttribute="top" secondItem="i8f-mI-8PY" secondAttribute="bottom" constant="8" id="P55-c0-sLK"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="mAb-cn-Mpt" secondAttribute="trailing" id="RM3-Pn-ay9"/>
+                            <constraint firstItem="mAb-cn-Mpt" firstAttribute="top" secondItem="2bn-xv-cEP" secondAttribute="bottom" constant="10" id="YWv-Xo-fwD"/>
+                            <constraint firstItem="mAb-cn-Mpt" firstAttribute="leading" secondItem="mC6-94-LmP" secondAttribute="leadingMargin" id="aKC-zm-upr"/>
+                            <constraint firstItem="PLz-w9-Bi1" firstAttribute="trailing" secondItem="mC6-94-LmP" secondAttribute="trailingMargin" id="gkq-sy-mRF"/>
+                            <constraint firstItem="u6I-Wj-jKX" firstAttribute="leading" secondItem="jvX-Wn-Mz4" secondAttribute="trailing" constant="8" id="hQr-fg-iRe"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="R4n-fe-NTW" secondAttribute="trailing" id="noo-w2-oMV"/>
+                            <constraint firstItem="2bn-xv-cEP" firstAttribute="leading" secondItem="jvX-Wn-Mz4" secondAttribute="trailing" constant="8" id="nwb-iT-yap"/>
+                            <constraint firstItem="PLz-w9-Bi1" firstAttribute="leading" secondItem="mC6-94-LmP" secondAttribute="leadingMargin" id="oGu-dD-RZt"/>
+                            <constraint firstItem="R4n-fe-NTW" firstAttribute="leading" secondItem="mC6-94-LmP" secondAttribute="leadingMargin" id="oTj-Lb-1BV"/>
+                            <constraint firstItem="2bn-xv-cEP" firstAttribute="trailing" secondItem="mC6-94-LmP" secondAttribute="trailingMargin" id="pJR-hf-aEc"/>
+                            <constraint firstItem="ln9-mx-Lg8" firstAttribute="centerX" secondItem="mC6-94-LmP" secondAttribute="centerX" id="pWm-iI-Dex"/>
+                            <constraint firstItem="Au7-4L-9zv" firstAttribute="leading" secondItem="mC6-94-LmP" secondAttribute="leadingMargin" id="tj2-if-HpC"/>
+                            <constraint firstItem="2bn-xv-cEP" firstAttribute="top" secondItem="u6I-Wj-jKX" secondAttribute="bottom" constant="10" id="wEA-zU-ECN"/>
+                            <constraint firstItem="jvX-Wn-Mz4" firstAttribute="leading" secondItem="mC6-94-LmP" secondAttribute="leadingMargin" id="xmJ-40-KH1"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Add/Edit" id="Ioh-1L-afL">
+                        <barButtonItem key="rightBarButtonItem" systemItem="trash" id="lv4-Tp-vEo">
+                            <color key="tintColor" red="1" green="0.34509803919999998" blue="0.33333333329999998" alpha="1" colorSpace="deviceRGB"/>
+                        </barButtonItem>
+                    </navigationItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="VuO-cm-SpB" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1843.125" y="-563.75"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="d0f-dV-VJF">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Krk-Xr-7bQ" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="rIi-qM-PPo">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="rIi-qM-PPo">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="barTintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -160,6 +277,10 @@
         </scene>
     </scenes>
     <resources>
+        <image name="imagePick" width="300" height="300"/>
         <image name="tesla" width="800" height="489"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="jhF-FD-Yhl"/>
+    </inferredMetricsTieBreakers>
 </document>
